# L04_data_structures_trees

./: CMakeLists.txt  README.md  main.cpp
include/: binary_search_tree.hpp  node.hpp  traversal_algorithm.hpp
src/: binary_search_tree.cpp  node.cpp  traversal_algorithm.cpp
